--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R:
                    email = "clemens.ager@uibk.ac.at")
 Description: What the package does (one paragraph).
 Depends: R (>= 3.4.2)
-License: MIT
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/bdcaf/vignetteEngineMake
